# JavaRena

./: Dockerfile  README.md  SHARE_FEATURE.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  shares.db  snippet.py  vite.config.ts
backend/: main.py  pyproject.toml  requirements.txt  server.py
backend/api/: sockets.py
backend/core/: config.py  database.py
backend/dependencies/: database.py
backend/public/: robots.txt
backend/routers/: __init__.py  compile.py  share.py  sockets.py  system.py
backend/schemas/: compile.py  share.py  system.py
backend/services/: java_compiler.py  share_service.py
backend/utils/: helpers.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Editor.tsx  NavBar.tsx  SEOHead.tsx  ShareDialog.tsx  XTermTerminal.tsx
public/: robots.txt  site.webmanifest  sitemap.xml
public/blog/: docker-for-java-beginners.md  dockerizing-spring-boot-guide.md  introduction-to-java-ecosystem.md  java-collections-framework-beginners.md  spring-boot-beginners-guide.md  understanding-java-jvm.md
src/: App.tsx  index.css
src/components/: Console.tsx  Editor.tsx  NavBar.tsx  SEOHead.tsx  ShareDialog.tsx  XTermTerminal.tsx
src/pages/: BlogList.tsx  Playground.tsx
